[package]
name = "corpus_utils"
version = "0.1.0"
authors = ["zom <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "load"
path = "src/load.rs"

[[bin]]
name = "create_corpus"
path = "src/create_corpus.rs"

[dependencies]
arbitrary_rust = { git = "https://github.com/zommiommy/arbitrary_rust", branch = "main" }
graph = {path = "../../graph"}
graph_harness = {path = "../graph_harness"}

[dev-dependencies]
arbitrary = "*"